Removed MIDIJournalWriter and orphaned ICSharpCode.SharpZipLib.dll

--- a/index.htm
+++ b/index.htm
@@ -301,8 +301,8 @@
         <p />
         Portions copyright 2002-2004 The Genghis Group (<a href="http://www.genghisgroup.com/">http://www.genghisgroup.com/</a>).
         <p />
-        SimpleMIDI, a free, open source .NET MIDI Library, by Erik Frey - <a href="http://fawx.com/">
-            http://fawx.com/</a>.
+        <s>SimpleMIDI, a free, open source .NET MIDI Library, by Erik Frey - <a href="http://fawx.com/">
+            http://fawx.com/</a>.</s>
         <p />
         <div style="border: 1px solid #000;">
             XML-RPC.NET by Charles Cook - <a href="http://www.xml-rpc.net">http://www.xml-rpc.net</a>.
